--- a/index.html
+++ b/index.html
@@ -1,1 +1,80 @@
-HELLLO
+<html>
+	<head>
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw==" crossorigin="anonymous">
+  <link href='https://fonts.googleapis.com/css?family=Lato:400,100,700,400italic' rel='stylesheet' type='text/css'>
+
+<style>
+body {
+  background-color:#F5F8FA;
+  font-family: 'Lato', sans-serif;
+}
+
+h1 {
+  margin-top:50px;
+  font-weight:600;
+  font-size:80px;
+}
+
+h2 {
+  font-style:italic;
+}
+
+.tech-icon {
+  width:100px;
+  margin-right:20px;
+  margin-top:30px;
+}
+.tech-icon-wide, .babel-icon {
+  height:90px;
+  margin-top:30px;
+}
+
+p {
+  margin:15px 15px;
+  font-size:16px;
+}
+.navbar-default {
+  background-color:#2882b5;
+  border-radius:0;
+  margin:0;
+  border:none;
+  border-color: #1c73a5;
+  border-width: 0 0 1px;
+  border-style:solid;
+  height: 40px;
+  min-height:40px;
+  padding-top:10px;
+  color:#EEE;
+}
+
+.navbar-default a {
+  font-weight:bold;
+  color:white;
+}
+
+img {
+width:100px;
+}
+
+a {
+font-weight:bold;
+color:black;
+}
+</style>
+	</head>
+	<body>
+	<h1 class="text-center">Floppy Rocket</h1>
+<br />
+<br /><br />
+<div class="text-center"> <img src="floppy.png" />&nbsp;&nbsp; <img src ="rocket.png" /></div>
+
+<p class="col-xs-6 col-xs-offset-3">
+Just ship it.
+</p>
+
+<p class="col-xs-6 col-xs-offset-3">
+Created by <a href="http://twitter.com/kenmazaika">@kenmazaika</a>
+</p>
+	</body>
+
+</html>
