--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Just ship it.
 </p>
 
 <p class="col-xs-6 col-xs-offset-3">
-Created by <a href="http://twitter.com/kenmazaika">@kenmazaika</a>
+Created by <a href="http://twitter.com/FirehoseProject">@FirehoseProject</a>
 </p>
 	</body>
 
